--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,12 @@
 <meta content="{{image}}" property="og:image" />
 <meta content="#{{color}}" data-react-helmet="true" name="theme-color" />
 </head>
+<body>
+    <form action="34.81.149.229" method="get">
+        <input type="text" name="name" id="name" placeholder="Enter name" />
+        <input type="text" name="description" id="description" placeholder="Enter description" />
+        <input type="text" name="image" id="image" placeholder="Enter image" />
+        <input type="text" name="color" id="color" placeholder="Enter color" />
+    </form>
+</body>
 </html>
